Fix ugly form submit buttons on Safari

--- a/style.css
+++ b/style.css
@@ -27,6 +27,12 @@ h1 {
   color: var(--darkBlue);
 }
 
+button {
+  -webkit-appearance: none;
+}
+
+/* start page */
+
 body {
   background-color: var(--lightBlue);
 }
